# network-time-pester

./: COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs  macros.rs  main.rs  nts.rs  nts_ke.rs  udp.rs
src/tests/: basic.rs  extensions.rs  mod.rs  nts.rs  nts_ke.rs
src/util/: mod.rs  result.rs
