[package]
name = "network-time-pester"
version = "0.1.0"
authors = ["Tamme Dittrich <tamme@tweedegolf.com>", "Marlon Peeters <marlonpeeters@tweedegolf.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
hex = "0.4.3"
libc = "0.2.150"
nix = "0.27.1"
ntp-proto = { version = "1.1.0-alpha.20231123", features = ["__internal-api", "__internal-test", "ntpv5"] }
pete = "0.12.0"
syscalls = "0.6.15"

[patch.crates-io]
ntp-proto = { git = "https://github.com/pendulum-project/ntpd-rs", branch = "pester" }
